force-app/main/default/objects/Secured__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Secured</label>
</CustomObject>