force-app/main/default/objects/Secured__c/fields/BotUsername__c.field-meta.xml
<CustomField>
    <fullName>BotUsername__c</fullName>
    <label>Bot Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>