force-app/main/default/objects/Secured__c/fields/SFToken__c.field-meta.xml
<CustomField>
    <fullName>SFToken__c</fullName>
    <label>SF Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>