force-app/main/default/objects/Secured__c/fields/SupportedChannels__c.field-meta.xml
<CustomField>
    <fullName>SupportedChannels__c</fullName>
    <label>Supported Channels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>