force-app/main/default/objects/Secured__c/fields/TelegramBotToken__c.field-meta.xml
<CustomField>
    <fullName>TelegramBotToken__c</fullName>
    <label>Telegram Bot Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>